plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// token 설정
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Lombok 추가
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//시큐리티 설정
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//테스트를 위한 시큐리티 설정
	testImplementation 'org.springframework.security:spring-security-test'

	// AWS S3
	implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.1.0'

	// Log4j2
	implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.1.2'

	// websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.4'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Email
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Thymeleaf (이메일 템플릿용)
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// property 값에 맞추기 위해 임시로 작성
	implementation 'mysql:mysql-connector-java:8.0.33'
}

configurations {
	configureEach {
		// Log4j2
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
